# Snake

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.c
include/: grafica.h  mappa.h  serpente.h
resources/: resource.rc
src/: grafica.c  mappa.c  serpente.c
